--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,35 +1,189 @@
-*{
+:root {
+    --aguamarina: rgba(99, 216, 170, 1);
+    --azul-claro: rgba(111, 188, 255, 1);
+    --azul-fuerte: rgba(11, 97, 131, 1);
+    --aguamarina-fuerte: rgba(57, 189, 167, 1);
+    --blanco: #FFF;
+    --negro: #000;
+}
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-body{
-    font-family: quicksand,Sans-serif;
+
+body {
+    font-family: quicksand, Sans-serif;
     font-size: 16px;
     line-height: 24px;
     color: #333;
+    max-width: 1200px;
+    margin: auto;
 }
-header{
-    background: rgb(111,188,255);
-    background: linear-gradient(90deg, rgba(111,188,255,1) 0%, rgba(11,97,131,1) 100%);
+
+#subir {
+    font-size: 30px;
+    position: fixed;
+    z-index: 30;
+    bottom: 80px;
+    left: 1100px;
+    background-color: var(--aguamarina-fuerte);
     color: white;
+    border-radius: 40px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+header {
+    background: var(--azul-claro);
+    background: linear-gradient(90deg, var(--azul-claro) 0%, var(--azul-fuerte) 100%);
+    color: var(--blanco);
     padding: 10px 20px;
 }
-.callus{
+
+.callus {
     float: right;
     margin-top: -25px;
 }
-.btn_tel{
+
+.btn_tel {
     text-decoration: none;
-    color: white;
+    color: var(--blanco);
     margin-left: 5px;
 }
-.btn_carrito{
+
+.btn_carrito {
     text-decoration: none;
-    color: white;
+    color: var(--blanco);
     margin-left: 10px;
 }
-.our_services{
+
+.our_services {
     background-color: transparent;
-    background-image: linear-gradient(180deg,#E9F6FF 0%,#FFFFFF 100%);
+    background-image: linear-gradient(180deg, #E9F6FF 0%, #FFFFFF 100%);
+}
+
+nav {
+    padding: 20px 80px;
+    display: flex;
+    height: auto;
+}
+
+nav figure {
+    display: inline-block;
+}
+
+#menu {
+    background-color: transparent;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    cursor: pointer;
+    transition: all 0.5s;
+    font-size: 40px;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-left: 25%;
+}
+
+nav ul li a {
+    display: block;
+    text-decoration: none;
+    color: var(--negro);
+    padding: 10px 30px;
+    transition: all 0.5s;
+}
+
+nav ul li a:hover {
+    background-color: white;
+    color: #95D4D9;
+}
+
+.btn_cotizar {
+    background: linear-gradient(90deg, var(--aguamarina) 0%, var(--aguamarina-fuerte) 100%);
+    padding: 10px 20px;
+    border-radius: 20px;
+    translate: 0.5s all;
+    color: var(--blanco);
+}
+
+.btn_cotizar:hover {
+    color: var(--negro);
+}
+
+footer{
+    background: linear-gradient(90deg, var(--azul-claro) 0%, var(--azul-fuerte) 100%);
+    padding: 20px 30px;
+    color: var(--blanco);
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.derechos{
+    width: 300px;
+    color: var(--blanco);
+    font-weight: 600;
+    text-align: justify;
+    font-size: 15px;
+}
+
+.contactar{
+    width: 300px;
+}
+
+.contactar h1{
+    margin-bottom: 20px;
+}
+
+.icono1{
+    float: left;
+    margin-top: 20px;
+}
+
+.direccion{
+    float: right;
+    margin-top: 10px;
+    width: 200px;
+    margin-right: 50px;
+}
+
+.icono2{
+    float: left;
+    margin-top: 80px;
+    margin-left: -12px;
+}
+
+.telefono{
+    float: right;
+    margin-top: 10px;
+    width: 130px;
+    margin-right: 120px;
+}
+
+.mas_info{
+    width: 300px;
+}
+
+.mas_info h1{
+    margin-bottom: 20px;
+}
+
+.reloj{
+    float: left;
+    margin-top: 15px;
+}
+
+.horario{
+    margin-left: 40px;
 }
