--- a/css/estilo.css
+++ b/css/estilo.css
@@ -57,6 +57,7 @@ header {
     text-decoration: none;
     color: var(--blanco);
     margin-left: 10px;
+    margin-right: 20px;
 }
 
 .our_services {
