--- a/css/estilo.css
+++ b/css/estilo.css
@@ -57,7 +57,6 @@ header {
     text-decoration: none;
     color: var(--blanco);
     margin-left: 10px;
-    margin-right: 20px;
 }
 
 .our_services {
@@ -125,10 +124,14 @@ nav ul li a:hover {
 
 footer{
     background: linear-gradient(90deg, var(--azul-claro) 0%, var(--azul-fuerte) 100%);
-    padding: 35px 30px;
+    padding: 40px 30px;
     color: var(--blanco);
     display: flex;
     justify-content: space-evenly;
+}
+
+.info_logo figure{
+    margin-bottom: 20px;
 }
 
 .derechos{
@@ -185,6 +188,22 @@ footer{
     margin-top: 15px;
 }
 
-.horario{
+.horario1{
     margin-left: 40px;
+}
+
+.correo{
+    color: var(--blanco);
+    float: left;
+    margin-top: 15px;
+}
+
+.correo_btn{
+    margin-top: 10px;
+    margin-left: 39px;
+}
+
+.btn_correo{
+    text-decoration: none;
+    color: var(--blanco);
 }
