--- a/css/estilo.css
+++ b/css/estilo.css
@@ -64,14 +64,18 @@ header {
     background-image: linear-gradient(180deg, #E9F6FF 0%, #FFFFFF 100%);
 }
 
+.logo_f{
+    display: none;
+}
+
 nav {
     padding: 20px 80px;
     display: flex;
-    height: auto;
-}
-
-nav figure {
-    display: inline-block;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 15px;
+    flex-wrap: wrap;
 }
 
 #menu {
@@ -79,35 +83,46 @@ nav figure {
     display: none;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 50px;
-    margin: 10px;
+    width: 60px;
+    height: 60px;
+    margin: auto;
     cursor: pointer;
     transition: all 0.5s;
-    font-size: 40px;
+    font-size: 60px;
 }
 
-nav ul {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+.contenedor_menu {
+    display: none;
+    padding: 10px 20px;
+}
+
+#iconomenu {
+    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    margin-left: 25%;
-}
-
-nav ul li a {
-    display: block;
+    background-color: transparent;
+    color: var(--aguamarina-fuerte);
+    padding: 10px;
+    border-radius: 5px;
+    width: 50px;
     text-decoration: none;
-    color: var(--negro);
-    padding: 10px 30px;
+    margin-left: 300px;
+    height: 50px;
+    cursor: pointer;
     transition: all 0.5s;
 }
 
-nav ul li a:hover {
-    background-color: white;
-    color: #95D4D9;
+nav a {
+    text-decoration: none;
+    color: var(--negro);
+    background-color: transparent;
+    padding: 10px 30px;
+    border-radius: 5px;
+    transition: all 0.5s;
+}
+
+nav a:hover {
+    color: white;
+    background-color: var(--aguamarina-fuerte);
 }
 
 .btn_cotizar {
@@ -122,7 +137,7 @@ nav ul li a:hover {
     color: var(--negro);
 }
 
-footer{
+footer {
     background: linear-gradient(90deg, var(--azul-claro) 0%, var(--azul-fuerte) 100%);
     padding: 40px 30px;
     color: var(--blanco);
@@ -130,11 +145,11 @@ footer{
     justify-content: space-evenly;
 }
 
-.info_logo figure{
+.info_logo figure {
     margin-bottom: 20px;
 }
 
-.derechos{
+.derechos {
     width: 300px;
     color: var(--blanco);
     font-weight: 600;
@@ -142,68 +157,68 @@ footer{
     font-size: 15px;
 }
 
-.contactar{
+.contactar {
     width: 300px;
 }
 
-.contactar h1{
+.contactar h1 {
     margin-bottom: 20px;
 }
 
-.icono1{
+.icono1 {
     float: left;
     margin-top: 20px;
 }
 
-.direccion{
+.direccion {
     float: right;
     margin-top: 10px;
     width: 200px;
     margin-right: 50px;
 }
 
-.icono2{
+.icono2 {
     float: left;
     margin-top: 80px;
     margin-left: -12px;
 }
 
-.telefono{
+.telefono {
     float: right;
     margin-top: 10px;
     width: 130px;
     margin-right: 120px;
 }
 
-.mas_info{
+.mas_info {
     width: 300px;
 }
 
-.mas_info h1{
+.mas_info h1 {
     margin-bottom: 20px;
 }
 
-.reloj{
+.reloj {
     float: left;
     margin-top: 15px;
 }
 
-.horario1{
+.horario1 {
     margin-left: 40px;
 }
 
-.correo{
+.correo {
     color: var(--blanco);
     float: left;
     margin-top: 15px;
 }
 
-.correo_btn{
+.correo_btn {
     margin-top: 10px;
     margin-left: 39px;
 }
 
-.btn_correo{
+.btn_correo {
     text-decoration: none;
     color: var(--blanco);
 }
