--- a/css/estilo.css
+++ b/css/estilo.css
@@ -76,6 +76,15 @@ nav {
     align-items: center;
     gap: 15px;
     flex-wrap: wrap;
+    /* position: fixed;
+    left: 0;
+	top: 0;
+    height: auto; */
+}
+
+nav figure{
+    width: 30%;
+    margin-left: -70px;
 }
 
 #menu {
@@ -221,4 +230,38 @@ footer {
 .btn_correo {
     text-decoration: none;
     color: var(--blanco);
+}
+
+.contenidomodal{
+    background-color: #fefefe;
+    margin: auto;
+    padding: 40px;
+    border: 1px solid #888;
+    width: 90%;
+}
+
+figure img{
+    width: 40%;
+}
+
+figure{
+    text-align: center;
+}
+
+.fondomodal{
+    display: none;
+    padding: 100px 10px;
+    position: fixed;
+    z-index: 90;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.5s;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.cerrar{
+    float: right;
+    font-size: 40px;
 }
