--- a/css/estilo.css
+++ b/css/estilo.css
@@ -265,3 +265,108 @@ figure{
     float: right;
     font-size: 40px;
 }
+
+@media screen and (max-width: 480px) {
+
+    body {
+        max-width: 480px;
+    }
+
+    #subir {
+        font-size: 30px;
+        position: fixed;
+        z-index: 30;
+        bottom: 50px;
+        left: 300px;
+    }
+
+    header {
+        padding: 30px 20px;
+    }
+
+    .horario {
+        font-size: 10px;
+        margin-top: -15px;
+        margin-left: -5px;
+    }
+
+    .callus {
+        display: flex;
+        font-size: 10px;
+        margin-top: -1px;
+    }
+
+    .contenedor_menu {
+        display: block;
+    }
+
+    #iconomenu {
+        display: flex;
+        margin-top: 10px;
+    }
+
+    .logo_f{
+        display: flex;
+        margin-top: -60px;
+        margin-left: 30px;
+        margin-bottom: 30px;
+    }
+
+    nav {
+        display: none;
+        padding: 10px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    nav figure{
+        display: none;
+    }
+
+    nav a {
+        width: 100%;
+        display: block;
+        border-radius: 0px;
+        border: 0px;
+        border-bottom: 1px var(--aguamarina) solid;
+    }
+
+    .btn_cotizar {
+        display: none;
+    }
+
+    footer {
+        display: block;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+        height: auto;
+        text-align: center;
+        padding-left: 40px;
+    }
+
+    .info_logo {
+        margin-bottom: 30px;
+    }
+
+    .derechos {
+        text-align: center;
+    }
+
+    .direccion {
+        margin-bottom: 20px;
+    }
+
+    .telefono {
+        margin-right: 10px;
+        margin-bottom: 30px;
+        width: 250px;
+        text-align: center;
+        margin-top: -2px;
+    }
+
+    .mas_info h1 {
+        margin-top: 30px;
+    }
+}
