--- a/css/estilo.css
+++ b/css/estilo.css
@@ -64,7 +64,7 @@ header {
     background-image: linear-gradient(180deg, #E9F6FF 0%, #FFFFFF 100%);
 }
 
-.logo_f{
+.logo_f {
     display: none;
 }
 
@@ -82,7 +82,7 @@ nav {
     height: auto; */
 }
 
-nav figure{
+nav figure {
     width: 30%;
     margin-left: -70px;
 }
@@ -144,6 +144,106 @@ nav a:hover {
 
 .btn_cotizar:hover {
     color: var(--negro);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/* responsiveslide css */
+
+.rslides {
+    position: relative;
+    list-style: none;
+    overflow: hidden;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.rslides li {
+    -webkit-backface-visibility: hidden;
+    position: absolute;
+    display: none;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+.rslides li:first-child {
+    position: relative;
+    display: block;
+    float: left;
+}
+
+.rslides img {
+    display: block;
+    height: auto;
+    float: left;
+    width: 100%;
+    border: 0;
+}
+
+/*  fin */
+
+.callbacks_container {
+    position: relative;
+    margin: auto;
+}
+
+.callbacks_container img {
+    height: 500px;
+    object-fit: cover;
+}
+
+.callbacks_container ul {
+    margin: 0px;
+}
+
+.caption {
+    position: absolute;
+    z-index: 2;
+    text-align: center;
+    font-size: 20px;
+    text-shadow: 0px 0px 10px #333;
+    color: var(--blanco);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 1.5;
+    width: 500px;
+    letter-spacing: 7px;
+}
+
+.callbacks_nav {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    opacity: 0.4;
+    z-index: 90;
+    text-indent: -9999px;
+    overflow: hidden;
+    text-decoration: none;
+    height: 50px;
+    width: 50px;
+    background: transparent url("img/flechas.png") no-repeat left top;
+    border: 2px var(--azul-fuerte) solid;
+    margin-top: -45px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.callbacks_nav.next {
+    left: auto;
+    background-position: right top;
+    right: 0;
+}
+
+.caption b {
+    text-align: center;
+    font-size: 25px;
+    line-height: 0;
 }
 
 footer {
@@ -232,7 +332,7 @@ footer {
     color: var(--blanco);
 }
 
-.contenidomodal{
+.contenidomodal {
     background-color: #fefefe;
     margin: auto;
     padding: 40px;
@@ -240,15 +340,15 @@ footer {
     width: 90%;
 }
 
-figure img{
+figure img {
     width: 40%;
 }
 
-figure{
+figure {
     text-align: center;
 }
 
-.fondomodal{
+.fondomodal {
     display: none;
     padding: 100px 10px;
     position: fixed;
@@ -261,7 +361,7 @@ figure{
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.cerrar{
+.cerrar {
     float: right;
     font-size: 40px;
 }
@@ -305,7 +405,7 @@ figure{
         margin-top: 10px;
     }
 
-    .logo_f{
+    .logo_f {
         display: flex;
         margin-top: -60px;
         margin-left: 30px;
@@ -320,7 +420,7 @@ figure{
         align-items: flex-start;
     }
 
-    nav figure{
+    nav figure {
         display: none;
     }
 
@@ -334,6 +434,18 @@ figure{
 
     .btn_cotizar {
         display: none;
+    }
+
+    .caption {
+        font-size: 15px;
+        width: 60%;
+        letter-spacing: 3px;
+    }
+
+    .caption b {
+        text-align: center;
+        font-size: 20px;
+        line-height: 0;
     }
 
     footer {
