--- a/css/estilo.css
+++ b/css/estilo.css
@@ -31,6 +31,10 @@ p, input, textarea, a{
     font-family: 'Open Sans', sans-serif;
 }
 
+a{
+    cursor: pointer;
+}
+
 #subir {
     font-size: 30px;
     position: fixed;
@@ -49,6 +53,8 @@ header {
     background: linear-gradient(90deg, var(--azul-claro) 0%, var(--azul-fuerte) 100%);
     color: var(--blanco);
     padding: 10px 20px;
+    max-width: 1200px;
+    width: 100%;
 }
 
 .callus {
@@ -85,6 +91,9 @@ nav {
     align-items: center;
     gap: 15px;
     flex-wrap: wrap;
+    max-width: 1200px;
+    width: 100%;
+    background-color: var(--blanco);
 }
 
 nav figure {
@@ -151,9 +160,8 @@ nav a:hover {
     color: var(--negro);
 }
 
-* {
-    margin: 0;
-    padding: 0;
+.slidefotos{
+    margin-top: 100px;
 }
 
 /* responsiveslide css */
@@ -528,6 +536,122 @@ footer {
 .mapa iframe {
     width: 100%;
     margin: auto;
+}
+
+.fondo1{
+    height: 870px;
+    width: 100%;
+    overflow: hidden;
+}
+
+#acercade .foto1{
+    position: absolute;
+    top: 450px;
+    left: 150px;
+    width: 60%;
+}
+
+#acercade .imagenau1{
+    width: 45%;
+    border-radius: 10px;
+}
+
+#acercade .foto2{
+    position: absolute;
+    top: 700px;
+    left: 350px;
+    width: 50%;
+}
+
+#acercade .imagenau2{
+    width: 45%;
+    border-radius: 10px;
+}
+
+#acercade .title3{
+    position: absolute;
+    top: 65%;
+    left: calc(50% + 50px);
+    font-size: 20px;
+    color: var(--aguamarina-fuerte);
+}
+
+#acercade .title4{
+    width: 40%;
+    line-height: 1.2;
+    position: absolute;
+    top: 72%;
+    left: calc(50% + 45px);
+    font-size: 40px;
+    color: var(--azul-fuerte);
+}
+
+.textau1{
+    position: absolute;
+    top: 87%;
+    left: calc(50% + 45px);
+    width: 35%;
+}
+
+.cuadro1{
+    position: absolute;
+    top: 100%;
+    left: 54%;
+    background-color: var(--blanco);
+    padding: 30px 60px;
+    border-radius: 20px;
+    text-align: center;
+    line-height: 1.7;
+    box-shadow: 0 10px 10px #888;
+}
+
+.cuadro1 h1{
+    color: var(--aguamarina);
+}
+
+.cuadro2{
+    position: absolute;
+    top: 100%;
+    left: 75%;
+    background-color: var(--blanco);
+    padding: 40px 20px;
+    border-radius: 20px;
+    text-align: center;
+    line-height: 1.7;
+    box-shadow: 0 10px 10px #888;
+}
+
+.cuadro2 h1{
+    color: var(--aguamarina);
+}
+
+.team{
+    width: 100%;
+}
+
+.team .title5{
+    font-size: 20px;
+    color: var(--aguamarina-fuerte);
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+.team .title6{
+    font-size: 40px;
+    color: var(--azul-fuerte);
+    text-align: center;
+    width: 50%;
+    margin: auto;
+    line-height: 1.2;
+}
+
+.team .textteam1{
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    margin-top: 15px;
+    font-size: 20px;
 }
 
 @media screen and (max-width: 480px) {
