--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,15 +23,19 @@ body {
     margin: auto;
 }
 
-h1, h2{
+h1,
+h2 {
     font-family: 'Roboto';
 }
 
-p, input, textarea, a{
+p,
+input,
+textarea,
+a {
     font-family: 'Open Sans', sans-serif;
 }
 
-a{
+a {
     cursor: pointer;
 }
 
@@ -158,10 +162,6 @@ nav a:hover {
 
 .btn_cotizar:hover {
     color: var(--negro);
-}
-
-.slidefotos{
-    margin-top: 100px;
 }
 
 /* responsiveslide css */
@@ -404,19 +404,19 @@ footer {
     height: 100%;
 }
 
-.contacto_titulo{
+.contacto_titulo {
     text-align: center;
     font-size: 40px;
     margin-top: 40px;
     margin-bottom: -10px;
 }
 
-.contacto{
+.contacto {
     margin-top: -5%;
     margin-bottom: 120px;
 }
 
-.contacto .title_contacto{
+.contacto .title_contacto {
     position: absolute;
     top: 53%;
     left: calc(50% - 70px);
@@ -424,7 +424,7 @@ footer {
     color: var(--aguamarina-fuerte);
 }
 
-.contacto .title2{
+.contacto .title2 {
     position: absolute;
     top: 60%;
     left: calc(50% - 170px);
@@ -432,13 +432,13 @@ footer {
     color: var(--azul-fuerte);
 }
 
-.fondo{
+.fondo {
     height: 900px;
     width: 100%;
     overflow: hidden;
 }
 
-.contacto form{
+.contacto form {
     font-size: 40px;
     width: 70%;
     background: transparent;
@@ -446,7 +446,7 @@ footer {
     margin-top: -460px;
 }
 
-.contacto form input{
+.contacto form input {
     border: 1px var(--aguamarina) solid;
     margin: 10px 15px;
     background-color: transparent;
@@ -455,27 +455,27 @@ footer {
     font-size: 16px;
 }
 
-#name{
+#name {
     width: 48%;
     margin-left: -290px;
     display: inline-block;
     padding: 25px 20px;
 }
 
-#email{
+#email {
     width: 48%;
     margin-left: -8px;
     display: inline-block;
     padding: 25px 20px;
 }
 
-#numero{
+#numero {
     width: 97.5%;
     margin-left: -290px;
     padding: 25px 20px;
 }
 
-#comentario{
+#comentario {
     width: 97.5%;
     height: 120px;
     margin-left: -290px;
@@ -485,13 +485,13 @@ footer {
     margin-top: 10px;
 }
 
-.contacto form p{
+.contacto form p {
     text-align: center;
     margin-left: -70%;
     margin-top: 10px;
 }
 
-#btn_enviar{
+#btn_enviar {
     background: linear-gradient(90deg, var(--aguamarina) 0%, var(--aguamarina-fuerte) 100%);
     margin-top: 25px;
     padding: 15px 30px 35px;
@@ -500,22 +500,22 @@ footer {
     font-weight: 600;
 }
 
-#btn_enviar:hover{
+#btn_enviar:hover {
     background: linear-gradient(90deg, var(--aguamarina-fuerte) 0%, var(--aguamarina) 100%);
     font-weight: 100;
     color: var(--blanco);
 }
 
-.datos{
+.datos {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(233,246,255,1) 100%);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(233, 246, 255, 1) 100%);
     margin: auto;
 }
 
-.datos article{
+.datos article {
     background-color: var(--blanco);
     text-align: center;
     color: var(--negro);
@@ -524,12 +524,12 @@ footer {
     height: 100%;
 }
 
-.datos article a{
+.datos article a {
     text-decoration: none;
     color: var(--negro);
 }
 
-.datos article p{
+.datos article p {
     font-weight: 900;
 }
 
@@ -538,37 +538,37 @@ footer {
     margin: auto;
 }
 
-.fondo1{
+.fondo1 {
     height: 870px;
     width: 100%;
     overflow: hidden;
 }
 
-#acercade .foto1{
+#acercade .foto1 {
     position: absolute;
     top: 450px;
     left: 150px;
     width: 60%;
 }
 
-#acercade .imagenau1{
+#acercade .imagenau1 {
     width: 45%;
     border-radius: 10px;
 }
 
-#acercade .foto2{
+#acercade .foto2 {
     position: absolute;
     top: 700px;
     left: 350px;
     width: 50%;
 }
 
-#acercade .imagenau2{
+#acercade .imagenau2 {
     width: 45%;
     border-radius: 10px;
 }
 
-#acercade .title3{
+#acercade .title3 {
     position: absolute;
     top: 65%;
     left: calc(50% + 50px);
@@ -576,7 +576,7 @@ footer {
     color: var(--aguamarina-fuerte);
 }
 
-#acercade .title4{
+#acercade .title4 {
     width: 40%;
     line-height: 1.2;
     position: absolute;
@@ -586,14 +586,14 @@ footer {
     color: var(--azul-fuerte);
 }
 
-.textau1{
+.textau1 {
     position: absolute;
     top: 87%;
     left: calc(50% + 45px);
     width: 35%;
 }
 
-.cuadro1{
+.cuadro1 {
     position: absolute;
     top: 100%;
     left: 54%;
@@ -605,11 +605,11 @@ footer {
     box-shadow: 0 10px 10px #888;
 }
 
-.cuadro1 h1{
+.cuadro1 h1 {
     color: var(--aguamarina);
 }
 
-.cuadro2{
+.cuadro2 {
     position: absolute;
     top: 100%;
     left: 75%;
@@ -621,15 +621,16 @@ footer {
     box-shadow: 0 10px 10px #888;
 }
 
-.cuadro2 h1{
+.cuadro2 h1 {
     color: var(--aguamarina);
 }
 
-.team{
+.team {
     width: 100%;
+    margin-bottom: 40px;
 }
 
-.team .title5{
+.team .title5 {
     font-size: 20px;
     color: var(--aguamarina-fuerte);
     text-align: center;
@@ -637,7 +638,7 @@ footer {
     margin-top: 40px;
 }
 
-.team .title6{
+.team .title6 {
     font-size: 40px;
     color: var(--azul-fuerte);
     text-align: center;
@@ -646,12 +647,202 @@ footer {
     line-height: 1.2;
 }
 
-.team .textteam1{
-    width: 70%;
+.team .textteam1 {
+    width: 80%;
     margin: auto;
     text-align: center;
     margin-top: 15px;
     font-size: 20px;
+    margin-bottom: 40px;
+}
+
+.contenedorcards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    flex-wrap: wrap;
+}
+
+.card {
+    position: relative;
+    max-width: 300px;
+    transition: all 0.5s ease;
+    margin-bottom: 50px;
+    transform: rotate(360deg);
+}
+
+.fotocard {
+    max-width: 300px;
+    height: 350px;
+    padding: 0;
+    margin: 0;
+}
+
+.fotocard img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.filtrocard {
+    width: 100%;
+    height: 350px;
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    filter: brightness(0.5);
+}
+
+.card:hover .redescard {
+    right: 0px;
+    opacity: 1;
+}
+
+.card:hover {
+    margin-top: -10px;
+    box-shadow: 0px 0px 10px #ccc;
+}
+
+.nombrecard {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #ccc;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    background-color: var(--aguamarina);
+    top: 90%;
+    left: calc(50% - 150px);
+}
+
+.redescard {
+    width: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding: 20px;
+    position: absolute;
+    z-index: 5;
+    top: 35%;
+    right: -5px;
+    opacity: 0;
+    transition: all 0.5s;
+    background-color: var(--aguamarina-fuerte);
+    color: var(--blanco);
+}
+
+.fondo2 {
+    height: 870px;
+    width: 100%;
+    overflow: hidden;
+}
+
+#vision_mision .title7 {
+    position: absolute;
+    top: 270%;
+    left: calc(50% - 100px);
+    font-size: 20px;
+    color: var(--aguamarina-fuerte);
+}
+
+#vision_mision .title8 {
+    line-height: 1.2;
+    position: absolute;
+    top: 275%;
+    left: calc(50% - 320px);
+    font-size: 40px;
+    color: var(--azul-fuerte);
+    width: 50%;
+    text-align: center;
+}
+
+#vision_mision .textteam2 {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    margin-top: 15px;
+    font-size: 20px;
+    margin-bottom: 40px;
+    position: absolute;
+    top: 290%;
+    left: calc(50% - 500px);
+}
+
+.vm{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    top: 305%;
+    width: 70%;
+    left: calc(50% - 480px);
+}
+
+.vm article{
+    width: 100%;
+    text-align: center;
+}
+
+.prices i{
+    clip-path: circle(50% at 50% 50%);
+    background-color: var(--aguamarina-fuerte);
+    color: var(--blanco);
+    font-size: 50px;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.services i{
+    clip-path: circle(50% at 50% 50%);
+    background-color: var(--aguamarina-fuerte);
+    color: var(--blanco);
+    font-size: 50px;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.subcontractor i{
+    clip-path: circle(50% at 50% 50%);
+    background-color: var(--aguamarina-fuerte);
+    color: var(--blanco);
+    font-size: 50px;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    padding-top: 25px;
+    padding-left: 15px;
+}
+
+#commercial .title9 {
+    position: absolute;
+    top: 115%;
+    left: calc(50% - 130px);
+    font-size: 20px;
+    color: var(--aguamarina-fuerte);
+}
+
+#commercial .title10 {
+    line-height: 1.2;
+    position: absolute;
+    top: 122%;
+    left: calc(50% - 320px);
+    font-size: 40px;
+    color: var(--azul-fuerte);
+    width: 50%;
+    text-align: center;
 }
 
 @media screen and (max-width: 480px) {
@@ -786,11 +977,11 @@ footer {
         margin: auto;
     }
 
-    .contacto form{
+    .contacto form {
         margin-top: -440px;
     }
 
-    .contacto form input{
+    .contacto form input {
         border: 1px var(--aguamarina) solid;
         margin: 10px 15px;
         background-color: transparent;
@@ -800,28 +991,28 @@ footer {
         width: 100%;
     }
 
-    #name{
+    #name {
         margin: auto;
         padding: 25px 20px;
         width: 90%;
         margin-bottom: 20px;
     }
 
-    #email{
+    #email {
         width: 90%;
         margin: auto;
         padding: 25px 20px;
         margin-bottom: 20px;
     }
 
-    #numero{
+    #numero {
         padding: 25px 20px;
         width: 90%;
         margin: auto;
         margin-bottom: 20px;
     }
 
-    #comentario{
+    #comentario {
         height: 120px;
         padding: 25px 20px;
         background-color: transparent;
@@ -831,28 +1022,28 @@ footer {
         margin-bottom: 20px;
     }
 
-    .contacto form p{
+    .contacto form p {
         text-align: center;
         margin: auto;
     }
 
-    #btn_enviar{
+    #btn_enviar {
         margin-top: 5px;
         font-size: 15px;
         margin-left: -5%;
     }
 
-    .datos{
+    .datos {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(233,246,255,1) 100%);
+        background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(233, 246, 255, 1) 100%);
         margin: auto;
         margin-top: -55px;
     }
 
-    .datos article{
+    .datos article {
         color: var(--negro);
         padding: 30px 40px;
         width: 80%;
@@ -860,7 +1051,166 @@ footer {
         margin-bottom: 20px;
     }
 
-    .mapa{
+    .mapa {
         margin-top: -20%;
+    }
+
+    .contacto_titulo {
+        font-size: 30px;
+    }
+
+    .fondo1 {
+        height: 1350px;
+        margin-top: -120px;
+        width: 100%;
+    }
+
+    #acercade .foto1 {
+        margin: auto;
+        width: 100%;
+        top: 120%;
+        left: calc(50% - 150px);
+    }
+
+    #acercade .imagenau1 {
+        width: 45%;
+        border-radius: 10px;
+    }
+
+    #acercade .foto2 {
+        position: absolute;
+        top: 125%;
+        left: calc(50% + 10px);
+        width: 80%;
+    }
+
+    #acercade .imagenau2 {
+        width: 45%;
+        border-radius: 10px;
+    }
+
+    #acercade .title3 {
+        position: absolute;
+        top: 60%;
+        left: calc(50% - 120px);
+        font-size: 20px;
+        color: var(--aguamarina-fuerte);
+    }
+
+    #acercade .title4 {
+        width: 80%;
+        line-height: 1.2;
+        position: absolute;
+        top: 65%;
+        left: calc(50% - 150px);
+        text-align: center;
+    }
+
+    .textau1 {
+        position: absolute;
+        top: 95%;
+        left: calc(50% - 135px);
+        width: 70%;
+        text-align: center;
+    }
+
+    .cuadro1 {
+        position: absolute;
+        top: 148%;
+        left: 23%;
+    }
+
+    .cuadro2 {
+        position: absolute;
+        top: 180%;
+        left: 25%;
+    }
+
+    .team {
+        width: 100%;
+    }
+
+    .team .title5 {
+        margin: auto;
+        margin-bottom: 20px;
+        margin-top: 40px;
+        font-size: 20px;
+    }
+
+    .team .title6 {
+        font-size: 30px;
+        text-align: center;
+        width: 80%;
+    }
+
+    .team .textteam1 {
+        width: 90%;
+        font-size: 15px;
+        margin-bottom: 20px;
+    }
+
+    .contenidomodal {
+        width: 70%;
+        display: block;
+        justify-content: center;
+    }
+
+    .contenidomodal figure img {
+        width: 40%;
+    }
+
+    .contenidomodal figure {
+        text-align: center;
+    }
+
+    .fondomodal {
+        display: none;
+        padding: 100px 10px;
+        position: fixed;
+        z-index: 90;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        transition: all 0.5s;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .fondo2{
+        height: 1700px;
+        margin-top: -90px;
+    }
+
+    #vision_mision .title7 {
+        position: absolute;
+        top: 515%;
+        left: calc(50% - 90px);
+        font-size: 20px;
+    }
+
+    #vision_mision .title8 {
+        top: 522%;
+        left: calc(50% - 160px);
+        width: 90%;
+    }
+
+    #vision_mision .textteam2 {
+        top: 552%;
+        left: calc(50% - 145px);
+    }
+
+    .vm{
+        flex-direction: column;
+        top: 580%;
+        width: 70%;
+        left: calc(50% - 130px);
+    }
+
+    .vm .prices{
+        margin-bottom: 30px;
+    }
+
+    .vm .services{
+        margin-bottom: 30px;
     }
 }
