--- a/css/estilo.css
+++ b/css/estilo.css
@@ -777,7 +777,7 @@ footer {
     left: calc(50% - 500px);
 }
 
-.vm{
+.vm {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -787,12 +787,12 @@ footer {
     left: calc(50% - 480px);
 }
 
-.vm article{
+.vm article {
     width: 100%;
     text-align: center;
 }
 
-.prices i{
+.prices i {
     clip-path: circle(50% at 50% 50%);
     background-color: var(--aguamarina-fuerte);
     color: var(--blanco);
@@ -803,7 +803,7 @@ footer {
     padding-top: 20px;
 }
 
-.services i{
+.services i {
     clip-path: circle(50% at 50% 50%);
     background-color: var(--aguamarina-fuerte);
     color: var(--blanco);
@@ -814,7 +814,7 @@ footer {
     padding-top: 20px;
 }
 
-.subcontractor i{
+.subcontractor i {
     clip-path: circle(50% at 50% 50%);
     background-color: var(--aguamarina-fuerte);
     color: var(--blanco);
@@ -837,12 +837,242 @@ footer {
 #commercial .title10 {
     line-height: 1.2;
     position: absolute;
-    top: 122%;
+    top: 120%;
     left: calc(50% - 320px);
     font-size: 40px;
     color: var(--azul-fuerte);
     width: 50%;
     text-align: center;
+}
+
+#commercial .servicios2 {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    top: 135%;
+    left: calc(50% - 575px);
+    width: 90%;
+}
+
+.servicios2 article {
+    text-align: center;
+    font-size: 30px;
+    width: 250px;
+    height: 300px;
+    background-color: var(--blanco);
+    padding: 40px;
+    border-radius: 10px;
+}
+
+.servicios2 article a {
+    text-decoration: none;
+}
+
+.servicios2 article a .icono3 {
+    color: var(--aguamarina);
+    margin-bottom: 25px;
+    transition: all 0.5s;
+}
+
+.servicios2 article a h1 {
+    color: var(--azul-fuerte);
+    line-height: 1.3;
+    font-size: 25px;
+    margin-bottom: 25px;
+    transition: all 0.5s;
+}
+
+.servicios2 article a .flecha {
+    clip-path: circle(39.7% at 50% 50%);
+    background-color: #ECF7F6;
+    color: var(--aguamarina-fuerte);
+    padding: 20px;
+    transition: all 0.5s;
+}
+
+.fondo3 {
+    height: 800px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.comments {
+    position: absolute;
+    top: 350%;
+    left: calc(50% - 140px);
+}
+
+.comments .title11 {
+    font-size: 20px;
+    color: var(--aguamarina-fuerte);
+    text-align: center;
+}
+
+.comments .title12 {
+    line-height: 1.2;
+    font-size: 40px;
+    color: var(--azul-fuerte);
+    width: 100%;
+    text-align: center;
+}
+
+.servicio_limpieza_info {
+    text-align: center;
+}
+
+.servicio_limpieza_info .title13 {
+    font-size: 20px;
+    color: var(--aguamarina-fuerte);
+    margin-bottom: 20px;
+}
+
+.servicio_limpieza_info .title14 {
+    font-size: 40px;
+    color: var(--azul-fuerte);
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.servicio_limpieza_info .textservicio {
+    width: 60%;
+    font-size: 15px;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+.servicios_limpieza {
+    display: grid;
+    grid-template-areas: "foto5 foto2 foto1 foto1" "foto4 foto3 foto1 foto1";
+    width: 100%;
+}
+
+.servicios_limpieza figure {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
+.servicios_limpieza figure a {
+    display: inline-block;
+    transition: all .5s ease;
+    height: 100%;
+}
+
+.servicios_limpieza figure a:hover {
+    transform: scale(1.1);
+    filter: brightness(.5);
+}
+
+.servicios_limpieza figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.foto1 {
+    grid-area: foto1;
+}
+
+.foto2 {
+    grid-area: foto2;
+}
+
+.foto3 {
+    grid-area: foto3;
+}
+
+.foto4 {
+    grid-area: foto4;
+}
+
+.foto5 {
+    grid-area: foto5;
+}
+
+.servicios_ofrecidos {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.servicios_ofrecidos h1{
+    color: var(--aguamarina-fuerte);
+    margin-top: 30px;
+    font-size: 35px;
+}
+
+.acordeon {
+    width: 70%;
+    margin: auto;
+    margin-top: 30px;
+}
+
+.acordeon_titulo {
+    color: var(--negro);
+    background: linear-gradient(90deg, rgba(57,189,167,1) 0%, rgba(233,246,255,1) 100%);
+    padding: 10px;
+    font-size: 14px;
+    height: 40px;
+    margin: 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.acordeon_contenido {
+    display: none;
+    margin: 0;
+    background: rgba(255, 255, 255, 0.5);
+    padding: 1em 1em 1.5em;
+}
+
+.icono4,
+.icono5,
+.icono6,
+.icono7 {
+    font-size: 20px;
+    transform: rotate(0deg);
+    transition: all .5s;
+}
+
+.rotar {
+    transition: all .5s;
+    transform: rotate(180deg);
+}
+
+.galeria {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.galeria figure {
+    max-width: 250px;
+    height: 250px;
+    box-shadow: 0px 0px 10px #ccc;
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.galeria figure img {
+    width: 100%;
+    object-fit: cover;
+    height: 350px;
+    border-radius: 15px;
+}
+
+.galeria img {
+    filter: brightness(50%);
+    transition: all 0.5s;
+}
+
+.galeria img:hover {
+    filter: brightness(100%);
 }
 
 @media screen and (max-width: 480px) {
@@ -1176,7 +1406,7 @@ footer {
         background-color: rgba(0, 0, 0, 0.5);
     }
 
-    .fondo2{
+    .fondo2 {
         height: 1700px;
         margin-top: -90px;
     }
@@ -1199,18 +1429,65 @@ footer {
         left: calc(50% - 145px);
     }
 
-    .vm{
+    .vm {
         flex-direction: column;
         top: 580%;
         width: 70%;
         left: calc(50% - 130px);
     }
 
-    .vm .prices{
+    .vm .prices {
         margin-bottom: 30px;
     }
 
-    .vm .services{
+    .vm .services {
         margin-bottom: 30px;
+    }
+
+    .fondo3 {
+        height: 2000px;
+        margin-top: -180px;
+    }
+
+    #commercial .title9 {
+        top: 120%;
+        left: calc(50% - 100px);
+        font-size: 15px;
+    }
+
+    #commercial .title10 {
+        top: 125%;
+        left: calc(50% - 150px);
+        font-size: 35px;
+        width: 80%;
+    }
+
+    #commercial .servicios2 {
+        flex-direction: column;
+        top: 140%;
+        left: calc(50% - 170px);
+    }
+
+    .servicios2 article {
+        margin-bottom: 20px;
+    }
+
+    .servicios_limpieza{
+        grid-template-areas: "foto1" "foto5" "foto2 " "foto4" "foto3 " ;
+    }
+
+    .title14{
+        line-height: 1.3;
+    }
+
+    .textservicio{
+        width: 100%;
+    }
+
+    .titulo_so{
+        font-size: 25px;
+        width: 80%;
+        margin: auto;
+        line-height: 1.3;
     }
 }
