--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1075,6 +1075,37 @@ footer {
     filter: brightness(100%);
 }
 
+.fotoparallaxs{
+    color: white;
+    padding: 100px;
+    background-image: url(/img/parallaxs.jpeg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 400px;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+.texto{
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
+
+.transparencia{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    position: absolute;
+    background-color: rgba(57, 189, 167, 0.4);;
+}
+
 @media screen and (max-width: 480px) {
 
     body {
